--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <footer>
           <p>
             This project was coded by
-            <a href="#" target="_blank">Alizwa Ntlai</a> and is
+            <a href="https://github.com/Alizwa-Ntlai" target="_blank">Alizwa Ntlai</a> and is
             <a href="#" target="_blank"> on GitHub</a> and
             <a href="#" target="_blank">hosted on Netlify</a>
           </p>
