--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             This project was coded by
             <a href="https://github.com/Alizwa-Ntlai" target="_blank">Alizwa Ntlai</a> and is
             <a href="https://github.com/Alizwa-Ntlai/Hosting-and-Github-Challenge" target="_blank"> on GitHub</a> and
-            <a href="#" target="_blank">hosted on Netlify</a>
+            <a href="https://darling-salmiakki-163bbf.netlify.app/" target="_blank">hosted on Netlify</a>
           </p>
         </footer>
       </div>
